--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
+    "gray-matter": "^4.0.2",
     "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next-mdx-remote": "^4.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
